# sc

./: .gitignore  README.md  pyproject.toml  sc.py
src/: ble.py  cli.py  osm_to_sqlite.py  piste_browser.py  ski.py
