[project]
name = "sc"
version = "0.1.14"
description = "Sensor chart viewing utility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ahrs>=0.4.0",
    "matplotlib>=3.7",
]

[project.scripts]
scx = "cli:main"

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]
